--- a/style.css
+++ b/style.css
@@ -1,2 +1,51 @@
+body {
+  background-color: #dddddd;
+}
+
+h1 {
+  text-align: center;
+  text-transform: uppercase;;
+  font-family: arial;
+  letter-spacing: 2px;
+  font-size: 60px;
+  font-weight: 700;
+
+
+}
+
+h2 {
+  text-align: center;
+  border: 5px solid gray;
+  width: 960px;
+  margin: 0 auto;
+  padding: 100px 0;
+  border-radius: 25px;
+  font-size: 50px;
+  font-family: arial;
+  color: #B2B2B2;
+  background-color: white;
+
+
+}
+.button-group {
+  text-align: center;
+}
+
+.button {
+  display: inline-block;
+  border-radius: 100px;
+  background: gray;
+  padding: 20px; 
+  width: 110px;
+  height: 110px;
+  color: white;
+  line-height: 110px;
+  font-size: 25px;
+  font-family: arial;
+  letter-spacing: 1.7px;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin: 20px 10px;
+}
 
 
