--- a/style.css
+++ b/style.css
@@ -9,13 +9,14 @@ h1 {
   letter-spacing: 2px;
   font-size: 60px;
   font-weight: 700;
+  color: #676767;
 
 
 }
 
 h2 {
   text-align: center;
-  border: 5px solid gray;
+  border: 5px solid #676767;
   width: 960px;
   margin: 0 auto;
   padding: 100px 0;
@@ -34,7 +35,7 @@ h2 {
 .button {
   display: inline-block;
   border-radius: 100px;
-  background: gray;
+  background: #676767;
   padding: 20px; 
   width: 110px;
   height: 110px;
