--- a/style.css
+++ b/style.css
@@ -10,8 +10,10 @@ h1 {
   font-size: 60px;
   font-weight: 700;
   color: #676767;
+}
 
-
+h2 {
+  text-align: center;
 }
 
 input {
@@ -38,8 +40,8 @@ input {
   border-radius: 100px;
   background: #676767;
   padding: 20px; 
-  width: 110px;
-  height: 110px;
+  width: 150px;
+  height: 150px;
   color: white;
   line-height: 110px;
   font-size: 25px;
@@ -49,6 +51,13 @@ input {
   text-transform: uppercase;
   margin: 20px 10px;
   box-shadow: 2px 2px 2px #888888;
+}
+
+.guesses_left {
+  font-size: 25px;
+  color: #676767;
+  font-style: italic;
+  text-align: center;
 }
 
 
